--- a/AspireTest.AppHost/AspireTest.AppHost.csproj
+++ b/AspireTest.AppHost/AspireTest.AppHost.csproj
@@ -11,6 +11,12 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="8.1.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.SqlServer" Version="8.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PetClinicWebMonolith\PetClinicWebMonolith.csproj" />
   </ItemGroup>
 
 </Project>
